# python-laudo

./: .gitignore  AGENTS.md  README.md  dev  dev.ps1  laudo.spec  mypy.ini  pyproject.toml  run_tests.bat  test_error.txt
src/laudo/: __init__.py  __main__.py  assets.py  core.py  custom_types.py  db.py  docx_reference_replacer.py  docxzip.py  exif.py  images.py  odt_reference_replacer.py  pdf.py  reference_replacer.py  template.py
src/laudo/filters/: __init__.py  filters.py  helpers_filters.py  markdown_filter.py
src/laudo/globals/: __init__.py  global_functions.py  inline_image.py  subdoc_func.py
src/laudo/gui/: __init__.py  caption_editor.py
src/laudo/odttpl/: inline_image.py  styles_manager.py  subdoc_helpers.py
tests/: conftest.py  test_assets.py  test_cli.py  test_core.py  test_exif.py  test_images.py
